--- a/public_html/css/HomePage/HomePage.css
+++ b/public_html/css/HomePage/HomePage.css
@@ -8,8 +8,9 @@ and open the template in the editor.
     Author     : mgk03
 */
 
+/* This iframe CSS need to go on any page using the MattTopNavBar iframe */
 iframe {
-    width: 350px;
+    width: 1200px;
     height: 200px;
     border: 0;
     frameborder: 0;
@@ -19,4 +20,86 @@ iframe {
 body, html { 
     overflow-x: hidden; 
     overflow-y: hidden;
+}
+
+.myButtonMatt {
+    -moz-box-shadow: 0px 0px 35px 6px #D79532;
+    -webkit-box-shadow: 0px 0px 35px 6px #D79532;
+    box-shadow: 0px 0px 35px 6px #D79532;
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #FF9900), color-stop(1, #FFCC7D));
+    background:-moz-linear-gradient(top, #FF9900 5%, #FFCC7D 100%);
+    background:-webkit-linear-gradient(top, #FF9900 5%, #FFCC7D 100%);
+    background:-o-linear-gradient(top, #FF9900 5%, #FFCC7D 100%);
+    background:-ms-linear-gradient(top, #FF9900 5%, #FFCC7D 100%);
+    background:linear-gradient(to bottom, #FF9900 5%, #FFCC7D 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF9900', endColorstr='#FFCC7D',GradientType=0);
+    background-color:#FF9900;
+    -moz-border-radius:42px;
+    -webkit-border-radius:42px;
+    border-radius:42px;
+    border:4px solid #D88201;
+    display:inline-block;
+    cursor:pointer;
+    color:#000;
+    font-family:Arial;
+    font-size:18px;
+    padding:32px 76px;
+    text-decoration:none;
+    text-shadow:7px 11px 10px #724501;
+    white-space: nowrap;
+}
+.myButtonMatt:hover {
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #5cbf2a), color-stop(1, #44c767));
+    background:-moz-linear-gradient(top, #5cbf2a 5%, #44c767 100%);
+    background:-webkit-linear-gradient(top, #5cbf2a 5%, #44c767 100%);
+    background:-o-linear-gradient(top, #5cbf2a 5%, #44c767 100%);
+    background:-ms-linear-gradient(top, #5cbf2a 5%, #44c767 100%);
+    background:linear-gradient(to bottom, #5cbf2a 5%, #44c767 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#5cbf2a', endColorstr='#44c767',GradientType=0);
+    background-color:#5cbf2a;
+}
+.myButtonMatt:active {
+    position:relative;
+    top: 5px;
+}
+
+.myButtonRaven {
+    -moz-box-shadow: 0px 0px 35px 6px #D79532;
+    -webkit-box-shadow: 0px 0px 35px 6px #D79532;
+    box-shadow: 0px 0px 35px 6px #D79532;
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #FF9900), color-stop(1, #FFCC7D));
+    background:-moz-linear-gradient(top, #FF9900 5%, #FFCC7D 100%);
+    background:-webkit-linear-gradient(top, #FF9900 5%, #FFCC7D 100%);
+    background:-o-linear-gradient(top, #FF9900 5%, #FFCC7D 100%);
+    background:-ms-linear-gradient(top, #FF9900 5%, #FFCC7D 100%);
+    background:linear-gradient(to bottom, #FF9900 5%, #FFCC7D 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF9900', endColorstr='#FFCC7D',GradientType=0);
+    background-color:#FF9900;
+    -moz-border-radius:42px;
+    -webkit-border-radius:42px;
+    border-radius:42px;
+    border:4px solid #D88201;
+    display:inline-block;
+    cursor:pointer;
+    color:#000;
+    font-family:Arial;
+    font-size:18px;
+    padding:32px 76px;
+    text-decoration:none;
+    text-shadow:7px 11px 10px #724501;
+    white-space: nowrap;
+}
+.myButtonRaven:hover {
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #5cbf2a), color-stop(1, #44c767));
+    background:-moz-linear-gradient(top, #5cbf2a 5%, #44c767 100%);
+    background:-webkit-linear-gradient(top, #5cbf2a 5%, #44c767 100%);
+    background:-o-linear-gradient(top, #5cbf2a 5%, #44c767 100%);
+    background:-ms-linear-gradient(top, #5cbf2a 5%, #44c767 100%);
+    background:linear-gradient(to bottom, #5cbf2a 5%, #44c767 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#5cbf2a', endColorstr='#44c767',GradientType=0);
+    background-color:#5cbf2a;
+}
+.myButtonRaven:active {
+    position:relative;
+    top: 5px;
 }
