--- a/public_html/css/MattNavBar/NavBarCss.css
+++ b/public_html/css/MattNavBar/NavBarCss.css
@@ -15,6 +15,7 @@
     float:left;
     position:relative;
     padding-right: 10px;
+    text-align: center;
 }
 .nav a {
     display:block;
@@ -32,7 +33,7 @@
 .nav li ul {
 }
 .nav li ul li {
-    width:200px;
+    width:220px;
     padding-top: 10px;
 }
 .nav li ul a {
