--- a/public_html/css/MattServerNetwork/MattServerNetwork.css
+++ b/public_html/css/MattServerNetwork/MattServerNetwork.css
@@ -4,20 +4,20 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
 /* 
-    Created on : Mar 13, 2016, 12:29:37 PM
+    Created on : Mar 19, 2016, 1:03:52 PM
     Author     : mgk03
 */
 
 /* This iframe CSS need to go on any page using the MattTopNavBar iframe */
 iframe {
     width: 1200px;
-    height: 500px;
+    height: 275px;
     border: 0;
     frameborder: 0;
     allowTransparency: true;
 }
 
-body, html {
+html {
     background:
         linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
         linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
@@ -30,16 +30,8 @@ body, html {
     overflow-x: hidden;
 }
 
-h1 {
-    
-}
-
-p {
-    
-}
-
-.Main {
-    padding-top: 50px;
+body {
+    padding-top: 280px;
     padding-left: 20px;
     font-size: 20px;
     width: 768px;
@@ -47,11 +39,63 @@ p {
     z-index: 99;
 }
 
-.sideimgA {
-    float: left;
-    padding-left: 20px;
-    padding-top: 50px;
-    Width: 256px;
-    padding-right: 20px;
-    z-index: 98;
+h2 {
+    font-family: monospace;
+    font-size: 28pt;
+}
+
+div { 
+    position: relative; 
+}
+
+input[type=checkbox] {
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   opacity: 0;
+}
+
+label {
+   cursor: pointer;
+}
+
+label {
+  position: relative;
+  display: block;
+  padding-left: 30px;
+}
+
+label:before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  top: 50%;
+  left: 10px;
+  border-left: 8px solid black;
+  border-top: 8px solid transparent;
+  border-bottom: 8px solid transparent;
+  margin-top: -8px;
+}
+
+input[type=checkbox]:checked ~ h2 label:before {
+  border-left: 8px solid transparent;
+  border-top: 8px solid black;
+  border-right: 8px solid transparent;
+  margin-left: -4px;
+  margin-top: -4px
+}
+
+p {
+  max-height: 0;
+  overflow: hidden;
+  padding-left: 30px;
+  transition: max-height 0.4s ease;
+  font-family: 'Habibi', serif;
+}
+
+input[type=checkbox]:checked ~ h2 ~ p {
+  max-height: 80px;
 }
