--- a/public_html/css/MattServerNetwork/MattServerNetwork.css
+++ b/public_html/css/MattServerNetwork/MattServerNetwork.css
@@ -17,7 +17,7 @@ iframe {
     allowTransparency: true;
 }
 
-html {
+.background {
     background:
         linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
         linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
@@ -28,74 +28,58 @@ html {
         background-color: #131313;
         background-size: 20px 20px;
     overflow-x: hidden;
+    font-family: monospace;
 }
 
-body {
+.Main{
     padding-top: 280px;
     padding-left: 20px;
     font-size: 20px;
     width: 768px;
-    color: darkkhaki;
     z-index: 99;
 }
 
-h2 {
+.headings {
     font-family: monospace;
-    font-size: 28pt;
+    font-size: 28px;
 }
 
-div { 
-    position: relative; 
+.bannerimgA {
+    border-radius: 50px;
+    float: left;
+    padding-left: 20px;
+    padding-top: 90px;
+    Width: 256px;
+    padding-right: 20px;
+    z-index: 98;
 }
 
-input[type=checkbox] {
-   position: absolute;
-   top: 0;
-   left: 0;
-   width: 100%;
-   height: 100%;
-   opacity: 0;
+.bannerimgB {
+    border-radius: 50px;
+    float: left;
+    padding-left: 20px;
+    padding-top: 90px;
+    Width: 256px;
+    padding-right: 20px;
+    z-index: 98;
 }
 
-label {
-   cursor: pointer;
+.Tabelized {
+    width: 100%;
+    border-collapse: collapse;
 }
 
-label {
-  position: relative;
-  display: block;
-  padding-left: 30px;
+.RowTab {
+    
 }
 
-label:before {
-  content: "";
-  position: absolute;
-  width: 0;
-  height: 0;
-  top: 50%;
-  left: 10px;
-  border-left: 8px solid black;
-  border-top: 8px solid transparent;
-  border-bottom: 8px solid transparent;
-  margin-top: -8px;
+.HeadTabe {
+    text-align: center;
+    border: 1px solid black;
 }
 
-input[type=checkbox]:checked ~ h2 label:before {
-  border-left: 8px solid transparent;
-  border-top: 8px solid black;
-  border-right: 8px solid transparent;
-  margin-left: -4px;
-  margin-top: -4px
-}
-
-p {
-  max-height: 0;
-  overflow: hidden;
-  padding-left: 30px;
-  transition: max-height 0.4s ease;
-  font-family: 'Habibi', serif;
-}
-
-input[type=checkbox]:checked ~ h2 ~ p {
-  max-height: 80px;
+.ColumnTabe {
+    padding: 10px;
+    width: 50%;
+    border: 1px solid black;
 }
